--- a/style.css
+++ b/style.css
@@ -400,6 +400,12 @@
             }
         }
 
+        @media (max-width: 767px) {
+            .cta-button-ap {
+                font-size: 12px;
+            }
+        }
+
         @media (max-width: 575.98px) {
             .service-item {
                 width: 280px;
